# geniai-analytics

./: .env.example  .gitignore  CONTEXTO_PROJETO.md  CONTRIBUTING.md  LICENSE  MONITORAMENTO_ETL.md  README.md  SECURITY.md  analyze_all_leads.py  analyze_jp_sul_mass.py  check_remarketing_results.py  crossmatch_excel_crm.py  etl_status.sh  investigate_conversations_direct.py  investigate_tenants_sample.py  match_leads_crm.py  monitor_etl.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run_continuous_analysis.sh  run_gpt4_analysis.py  test.txt  test_analyze_tenant1.py
.github/: pull_request_template.md
claude_memory/: ETL_V3_IMPLEMENTACAO.md
docs/: 00_INDEX.md  ALLPFIT_COMPREHENSIVE_SUMMARY.md  CODIGO_EXEMPLO_IMPLEMENTACAO.md  DOCUMENTATION_CLEANUP_REPORT.md  ETL_V3_README.md  EXPLORATION_INDEX.md  INDICE_ANALISE.txt  PGADMIN_CONFIGURATION.md  PROJECT_TRANSFORMATION_2025.md  README.md  README_MELHORIAS.md  REFACTORING_2025.md  RESUMO_MELHORIAS.md  dashboard_kpis_completo.md  deploy_production.md  etl_resumo_sucesso.md  fix_rls_login_policy.md  melhorias_dashboard_multitenant.md  new_view_specification.md  performance_strategy.md  schema_explicacao.md  update_etl.md  view_comparison.md  view_requirements.md  views_checklist.md
migrations/: 008_add_openai_support.sql  009_add_openai_data_columns.sql
scripts/: apply_openai_migration.py  check_etl_health.sh  explore_tables.py  export_openai_data.py  fix_rls_permissions.sh  inspect_view.py  restart_multi_tenant.sh  run_etl_manual.sh  setup_systemd.sh  test_campaigns_module.py  test_connection.py  test_new_views.py
sql/: 01_create_database.sql  04_migrate_allpfit_data.sql  06_test_isolation.sql  09_add_rls_analytics.sql  10_test_rls_analytics.sql  11_add_ai_analysis_columns.sql  12_create_campaigns_tables.sql  12b_grant_campaigns_permissions.sql  README.md  create_view_v2_enhanced.sql
src/: __init__.py
systemd/: README.md  allpfit-etl.service  allpfit-etl.timer  etl-allpfit.service  etl-allpfit.timer  etl-geniai.service  etl-geniai.timer
tests/: test_analyzers_integration.py  test_config.py  test_crm.py  test_etl_openai_full.py  test_etl_openai_incremental.py  test_etl_openai_subset.py  test_imports.py  test_openai_analyzer.py  test_openai_lead_remarketing_analyzer.py  test_pipeline_end_to_end.py  test_template_manager.py  watch_etl_parallel.sh
(+179 files in other folders)
